--- a/ensyu/11.html
+++ b/ensyu/11.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8" />
     <title>プロパティ（その２）</title>
     <!--ここにGoogle Fontsのlinkタグ-->
+    <link rel="preconnect" href="https://fonts.gstatic.com" />
+    <link href="https://fonts.googleapis.com/css2?family=Yusei+Magic&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="11.css" />
   </head>
   <body>
@@ -21,6 +23,7 @@
     <p class="left">左揃え</p>
     <p class="center">
       <!--ここにimgタグ-->
+      <img src="img/sample.jpg" alt="中央揃え" width="200" height="100" />
     </p>
     <p class="right">右揃え</p>
   </body>
