--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 		<header class="header ">
 			<div class="inner">
 				<h1 class="header-logo">
-					<a href=".">JOHO TARO</a>
+					<a href=".">YUKI WATANABE</a>
 				</h1>
 				<nav class="header-nav">
 					<ul class="header-nav-list">
@@ -36,15 +36,15 @@
 			<!-- main-visual -->
 			<div class="main-visual" id="about">
 				<div class="main-visual-inner">
-					<p class="main-visual-title">JOHO TARO</p>
+					<p class="main-visual-title">WATANABE YUKI</p>
 					<p class="main-visual-subtitle">PORTFOLIO</p>
 					<div class="main-visual-profile">
 						<p class="main-visual-img">
 							<img src="portfolio/img/profile.png" alt="自画像" />
 						</p>
 						<p class="main-visual-text">
-							開校53年の経験とノウハウがあり、<br class="sp-only">他校ではマネのできない実績。<br>
-							HCSなら、即戦力になるためのスキルが<br class="sp-only">ガッチリ身につきます。<br>
+							今年入学した新一年生であり、<br class="sp-only">最近出てきたやる気。<br>
+							資格を取得するために<br class="sp-only">ガッチリ勉強します。<br>
 						</p>
 					</div>
 				</div>
@@ -67,7 +67,8 @@
 						<a class="works-item btn-open" href="ensyu/10.html">ENSYU 10</a>
 						<a class="works-item btn-open" href="ensyu/11.html">ENSYU 11</a>
 						<a class="works-item btn-open" href="ensyu/12.html">ENSYU 12</a>
-						<a class="works-item btn-open" href="ensyu/13.html">ENSYU 13</a>
+						<a class="works-item btn-open" href="ensyu/13_1.html">ENSYU 13_1</a>]
+						<a class="works-item btn-open" href="ensyu/13_2.html">ENSYU 13_2</a>
 						<a class="works-item btn-open" href="ensyu/14.html">ENSYU 14</a>
 						<a class="works-item btn-open" href="ensyu/15.html">ENSYU 15</a>
 						<a class="works-item btn-open" href="ensyu/16.html">ENSYU 16</a>
@@ -97,7 +98,7 @@
 							<div class="skill-body">
 								<h3 class="skill-name">HTML5/CSS3</h3>
 								<p class="skill-text">
-									テキストが入りますテキストが入りますテキストが入りますテキストが入りますテキストが入りますテキストが入ります。</p>
+									演習課題を取り組み中。</p>
 							</div>
 						</div>
 						<div class="skill-item">
@@ -105,7 +106,7 @@
 							<div class="skill-body">
 								<h3 class="skill-name">Python</h3>
 								<p class="skill-text">
-									テキストが入りますテキストが入りますテキストが入りますテキストが入りますテキストが入りますテキストが入ります。</p>
+									基本的な知識を身に着けました。</p>
 							</div>
 						</div>
 						<div class="skill-item">
@@ -113,7 +114,7 @@
 							<div class="skill-body">
 								<h3 class="skill-name">Java</h3>
 								<p class="skill-text">
-									テキストが入りますテキストが入りますテキストが入りますテキストが入りますテキストが入りますテキストが入ります。</p>
+									アルゴリズムを理解できないため理解に苦労しています。</p>
 							</div>
 						</div>
 						<div class="skill-item">
@@ -121,7 +122,7 @@
 							<div class="skill-body">
 								<h3 class="skill-name">国家試験</h3>
 								<p class="skill-text">
-									テキストが入りますテキストが入りますテキストが入りますテキストが入りますテキストが入りますテキストが入ります。</p>
+									取得数０</p>
 							</div>
 						</div>
 					</div>
