--- a/challenge2/ch2.html
+++ b/challenge2/ch2.html
@@ -8,6 +8,9 @@
       content="心と体にやさしいオーガニックコーヒーを提供するNatural Coffee。"
     />
     <link rel="stylesheet" href="ch2.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=M+PLUS+1p:wght@700&display=swap" rel="stylesheet">
   </head>
   <body>
     <div class="wrapper">
