--- a/index.html
+++ b/index.html
@@ -42,6 +42,9 @@
 						<p class="main-visual-img">
 							<img src="portfolio/img/profile.png" alt="自画像" />
 						</p>
+						<p class="main-img">
+							<img src="portfolio/img/logo.png" alt="ポートフォリオ画像" />
+						</p>
 						<p class="main-visual-text">
 							今年入学した新一年生であり、<br class="sp-only">最近出てきたやる気。<br>
 							資格を取得するために<br class="sp-only">ガッチリ勉強します。<br>
@@ -94,7 +97,7 @@
 					<h2 class="title">SKILL</h2>
 					<div class="skill-list">
 						<div class="skill-item">
-							<p class="skill-img"><img src="portfolio/img/icon_skill.png" alt=""></p>
+							<p class="skill-img"><img src="portfolio/img/html.ico" alt=""></p>
 							<div class="skill-body">
 								<h3 class="skill-name">HTML5/CSS3</h3>
 								<p class="skill-text">
@@ -102,7 +105,7 @@
 							</div>
 						</div>
 						<div class="skill-item">
-							<p class="skill-img"><img src="portfolio/img/icon_skill.png" alt=""></p>
+							<p class="skill-img"><img src="portfolio/img/python.ico" alt=""></p>
 							<div class="skill-body">
 								<h3 class="skill-name">Python</h3>
 								<p class="skill-text">
@@ -110,7 +113,7 @@
 							</div>
 						</div>
 						<div class="skill-item">
-							<p class="skill-img"><img src="portfolio/img/icon_skill.png" alt=""></p>
+							<p class="skill-img"><img src="portfolio/img/java.ico" alt=""></p>
 							<div class="skill-body">
 								<h3 class="skill-name">Java</h3>
 								<p class="skill-text">
@@ -118,7 +121,7 @@
 							</div>
 						</div>
 						<div class="skill-item">
-							<p class="skill-img"><img src="portfolio/img/icon_skill.png" alt=""></p>
+							<p class="skill-img"><img src="portfolio/img/sikaku.ico" alt=""></p>
 							<div class="skill-body">
 								<h3 class="skill-name">国家試験</h3>
 								<p class="skill-text">
