--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
 						<a class="works-item btn-open" href="ensyu/10.html">ENSYU 10</a>
 						<a class="works-item btn-open" href="ensyu/11.html">ENSYU 11</a>
 						<a class="works-item btn-open" href="ensyu/12.html">ENSYU 12</a>
-						<a class="works-item btn-open" href="ensyu/13_1.html">ENSYU 13_1</a>]
+						<a class="works-item btn-open" href="ensyu/13_1.html">ENSYU 13_1</a>
 						<a class="works-item btn-open" href="ensyu/13_2.html">ENSYU 13_2</a>
 						<a class="works-item btn-open" href="ensyu/14.html">ENSYU 14</a>
 						<a class="works-item btn-open" href="ensyu/15.html">ENSYU 15</a>
