--- a/index.html
+++ b/index.html
@@ -75,13 +75,19 @@
 						<a class="works-item btn-open" href="ensyu/14.html">ENSYU 14</a>
 						<a class="works-item btn-open" href="ensyu/15.html">ENSYU 15</a>
 						<a class="works-item btn-open" href="ensyu/16.html">ENSYU 16</a>
-						<a class="works-item btn-open" href="ensyu/17_3.html">ENSYU 17</a>
+						<a class="works-item btn-open" href="ensyu/17_1.html">ENSYU 17_1</a>
+						<a class="works-item btn-open" href="ensyu/17_2.html">ENSYU 17_2</a>
+						<a class="works-item btn-open" href="ensyu/17_3.html">ENSYU 17_3</a>
 						<a class="works-item btn-open" href="ensyu/18.html">ENSYU 18</a>
-						<a class="works-item btn-open" href="ensyu/19_2.html">ENSYU 19</a>
+						<a class="works-item btn-open" href="ensyu/19_1.html">ENSYU 19_1</a>
+						<a class="works-item btn-open" href="ensyu/19_2.html">ENSYU 19_2</a>
 						<a class="works-item btn-open" href="ensyu/20.html">ENSYU 20</a>
-						<a class="works-item btn-open" href="ensyu/21_2.html">ENSYU 21</a>
-						<a class="works-item btn-open" href="ensyu/22_2.html">ENSYU 22</a>
-						<a class="works-item btn-open" href="ensyu/23_2.html">ENSYU 23</a>
+						<a class="works-item btn-open" href="ensyu/21_1.html">ENSYU 21_1</a>
+						<a class="works-item btn-open" href="ensyu/21_2.html">ENSYU 21_2</a>
+						<a class="works-item btn-open" href="ensyu/22_1.html">ENSYU 22_1</a>
+						<a class="works-item btn-open" href="ensyu/22_2.html">ENSYU 22_2</a>
+						<a class="works-item btn-open" href="ensyu/23_1.html">ENSYU 23_1</a>
+						<a class="works-item btn-open" href="ensyu/23_2.html">ENSYU 23_2</a>
 						<a class="works-item btn-box" href="challenge/ch.html">CHALLENGE1</a>
 						<a class="works-item btn-box" href="challenge2/ch2.html">CHALLENGE2</a>
 						<a class="works-item btn-gradation" href="lesson6/index.html">LESSON 6</a>
